<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>LiveWire</class>
 <widget class="QWidget" name="LiveWire">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>451</width>
    <height>139</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>6</number>
   </property>
   <item>
    <layout class="QVBoxLayout" name="verticalLayout_4">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QPushButton" name="pbStart">
         <property name="text">
          <string>Start</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pbReset">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Reset</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pbUndo">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Undo</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pbDone">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Done</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QGroupBox" name="gbOrientation">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="title">
      <string>Orientation</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QRadioButton" name="rbNoOrientaion">
          <property name="text">
           <string>No orientation</string>
          </property>
          <property name="checked">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="rbClockwise">
          <property name="text">
           <string>Clockwise</string>
          </property>
          <property name="icon">
           <iconset resource="../../qresources.qrc">
            <normaloff>:/Images/icons/turn.svg</normaloff>:/Images/icons/turn.svg</iconset>
          </property>
          <property name="checked">
           <bool>false</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="rbCounterClockwise">
          <property name="text">
           <string>Counter clockwise</string>
          </property>
          <property name="icon">
           <iconset resource="../../qresources.qrc">
            <normaloff>:/Images/icons/turn_left.png</normaloff>:/Images/icons/turn_left.png</iconset>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="cbImageAsSaliency">
     <property name="text">
      <string>Load the image itself as the orientation saliency map</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../../qresources.qrc"/>
 </resources>
 <connections/>
</ui>
